--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+@use '_variables'
+
+html, body
+    margin: 0
+    padding: 0
+    width: 100vw
+    background-color: rgb(24, 24, 24)
+    color: rgb(211, 211, 211)
+    font-family: 'Montserrat', sans-serif
+    font-size: 18px
+
+section
+    min-height: 100vh
+    padding: 65px 0 0 0
+
+.center
+    display: flex
+    align-items: center
+    justify-content: center
