--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<header>
+
+<div class="container header">
   <img height="40" alt="Logo" src="./assets/logo3.png" />
-</header>
+</div>
 
 <app-weather></app-weather>
 
