--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,7 +1,6 @@
-header    
-    padding: 10px 10vw
-    position: fixed
+.header    
+    max-width: 992px
+    margin: 35px auto
     @media screen and ( max-width: 350px )
-        padding: 10px 0
         img
             max-width: 100vw
