--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-<div class="container header">
-  <img height="40" alt="Logo" src="./assets/logo3.png" />
+<div id="app" class="sunny">
+  <app-header></app-header>
+  <app-weather></app-weather>
 </div>
-
-<app-weather></app-weather>
 
 <router-outlet></router-outlet>
