--- a/src/app/weather/weather-today/weather-today.component.html
+++ b/src/app/weather/weather-today/weather-today.component.html
@@ -1,20 +1,26 @@
 <div class="row">
   <div class="col-md-6 center">
-    <img (click)="click()" class="current-ico" [src]="imageUrl" alt="Image" />
+    <img
+      (click)="click()"
+      id="current-ico"
+      class="sun"
+      [src]="imageUrl"
+      alt="Image"
+    />
   </div>
   <div class="col-md-6 weather-info">
     <div class="row">
-      <!--to do properly, now just works-->
       <div class="col-md-6">
-        <p *ngIf="weatherData == null">12 &deg;</p>
-        <p *ngIf="weatherData == null">shitw</p>
-        <p *ngIf="weatherData != null">{{ weatherData.main.temp }} &deg;</p>
-        <p *ngIf="weatherData != null">{{ weatherData.weather[0].main }}</p>
+        <p class="big-temp" *ngIf="weatherData == null">
+          12 <sup class="degrees">&deg;C</sup>
+        </p>
       </div>
-      <div class="col-md-6">
-        <span *ngIf="foundCity == null">Breslau</span>
-        <span *ngIf="foundCity != null">{{ foundCity.name }}</span>
+      <div class="col-md-6 center">
+        <p class="md-font" *ngIf="weatherData == null">Sunny</p>
       </div>
+    </div>
+    <div class="row">
+      <p class="md-font weather-main" *ngIf="foundCity == null">Breslau</p>
     </div>
   </div>
 </div>
