--- a/src/app/weather/weather-week/weather-week.component.sass
+++ b/src/app/weather/weather-week/weather-week.component.sass
@@ -1,3 +1,4 @@
+@import '../../../_variables.sass'
 ul
     width: 100%
     display: inline-block
@@ -8,9 +9,9 @@ li
     display: inline-block
     text-align: center
     padding: 20px
-    background-color: rgb(50, 50, 50)
-    border: 2px solid rgb(77, 77, 77)
-    border-top-style: none
+    border-left: 1px solid rgba(255, 255, 255, 0.486)
+    &:first-child
+        border: none
     img
         display: inline-block
         width: 100px
