--- a/src/app/weather/weather.component.sass
+++ b/src/app/weather/weather.component.sass
@@ -1,18 +1,17 @@
-@import '../../variables.sass'
+@import '../../_variables.sass'
 .container
-    background: linear-gradient(-180deg, #ff860d 34%, #ffb726 81%, #ff860d00 90%)
-    border-radius: 25px 25px 0 0
-    padding: 5px 5px 0 5px
+    padding: 5px
     max-width: 992px
     @media screen and ( max-width: 992px )
         max-width: 100vw
 .wrap
-    background-color: $bg-primary
-    border-radius: 25px 25px 0 0
-.today
-    margin: 0
-    max-width: 100%
-    padding: 5vh 5vw
-.week
-    width: 100%
-    margin: 50px 0
+    .today
+        margin: 0
+        max-width: 100%
+        border-radius: 25px 25px 0 0
+        padding: 5vh 5vw 5vw 5vw
+    .week
+        width: 100%
+        padding: 15px 0 0 0
+        background-color: $light-opa
+        border-radius: 20px
