--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <span (click)="click()"
+    >click me to test service, but first type sth above and pick city</span
+  >
   <div class="wrap">
     <div class="today">
       <app-weather-today
