--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -9,17 +9,20 @@ $bg-grey: #d1d5de
 $bg-night: #403d58
 $bg-rain: #0892a5
 
-$light-blue: #51A4DB
-$whitel-blue: #73BAE1
+$sunny-blue: #51A4DB
+$sunny-lblue: #73BAE1
 
 $cloudy-blue: #5494B2
-$grey-blue: #A7BDCA
+$cloudy-grey: #A7BDCA
 
-$grey: #7F838D
-$light-grey: #ADB7BE
+$cloud-grey: #7F838D
+$cloud-lgrey: #ADB7BE
 
 $night-blue: #112158
-$purple: #9662A2
+$night-purple: #9662A2
+
+$storm-blue: #4065A4
+$storm-pink: #D1AFA7
 
 $white: #ffffff
 
