--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,3 +17,12 @@ html, body
     display: flex
     align-items: center
     justify-content: center
+
+.text-outline
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
+.font-big
+    font-size: 4em
+.font-md
+    font-size: 1.75em
+.font-sm
+    font-size: 0.4em
