--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -23,7 +23,7 @@ $radius: 0.25rem
         max-height: 43px
         min-width: $input-width + 40px
         @media screen and ( max-width: 774px )
-            min-width: $input-width
+            width: $input-width - 40px
         @media screen and ( max-width: 450px )
             margin-top: 20px
         input 
