styling for each weather

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -19,7 +19,9 @@
 .storm
     @include line-gradient($storm-blue, $storm-pink, 0%, 200%)
 .rain
+    font-weight: bolder
     @include line-gradient($storm-blue, $cloudy-grey, 0%, 200%)
 .snow
     font-weight: bolder
     @include line-gradient($cloud-lgrey, $cloud-grey, 0%, 200%)
+
