--- a/src/app/weather/weather-today/weather-today.component.html
+++ b/src/app/weather/weather-today/weather-today.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6 center">
-    <img id="current-ico" class="storm" [src]="imageUrl" alt="Image" />
+    <img id="current-ico" class="rain" [src]="imageUrl" alt="Image" />
   </div>
   <div class="col-md-6 weather-info text-outline">
     <div class="row">
