--- a/src/app/weather/weather.component.sass
+++ b/src/app/weather/weather.component.sass
@@ -15,3 +15,4 @@
         padding: 15px 0 0 0
         background-color: $light-opa
         border-radius: 20px
+        box-shadow: 1px 1px 17px -10px black
