--- a/src/app/weather/weather-today/weather-today.component.sass
+++ b/src/app/weather/weather-today/weather-today.component.sass
@@ -35,9 +35,10 @@
     max-width: 233px
     @media ( max-width: 770px )
         max-width: 100%
-.weather-city
-    margin-top: 50px
+.center-row
     padding: 0 15px 0 15px
     width: 100%
     text-align: center
+.weather-city
+    margin-top: 50px
     letter-spacing: 8px
