--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="week">
       <app-weather-week
-        [weatherData]="weatherData"
+        [fiveDaysWeatherData]="fiveDaysWeatherData"
         [foundCity]="foundCity"
       ></app-weather-week>
     </div>
