--- a/src/app/weather/weather.component.sass
+++ b/src/app/weather/weather.component.sass
@@ -9,7 +9,9 @@
         margin: 0
         max-width: 100%
         border-radius: 25px 25px 0 0
-        padding: 5vh 5vw 5vw 5vw
+        padding: 0 5vw
+        @media screen and ( max-width: 774px )
+            padding: 5vh 5vw 5vw 5vw
     .week
         width: 100%
         padding: 15px 0 0 0
