--- a/src/styles.sass
+++ b/src/styles.sass
@@ -20,9 +20,11 @@ html, body
 
 .text-outline
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
-.font-big
+.font-lg
     font-size: 4em
-.font-md
+.font-bg
     font-size: 1.75em
+.font-md
+    font-size: 1em
 .font-sm
     font-size: 0.4em
