--- a/src/app/weather/weather-week/weather-week.component.sass
+++ b/src/app/weather/weather-week/weather-week.component.sass
@@ -15,6 +15,7 @@ li
     img
         display: inline-block
         width: 100px
+        height: 100px
         @media ( max-width: 100px )
             width: 100%
     @media ( max-width: 992px )
