--- a/src/app/weather/weather.component.sass
+++ b/src/app/weather/weather.component.sass
@@ -6,12 +6,17 @@
         max-width: 100vw
 .wrap
     .today
-        margin: 0
+        margin: 25px 2.5vw
         max-width: 100%
-        border-radius: 25px 25px 0 0
-        padding: 0 5vw
+        border-radius: 25px
+        padding: 25px 2.5vw
+        background-color: $light-opa
+        box-shadow: 1px 1px 17px -10px black
         @media screen and ( max-width: 774px )
             padding: 5vh 5vw 5vw 5vw
+            margin: 0
+            background-color: transparent
+            box-shadow: none
     .week
         width: 100%
         padding: 15px 0 0 0
