minor style fixes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="container header">
   <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-      <img height="40" alt="Logo" src="./assets/logo3.png" />
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 logo">
+      <!--<img height="40" alt="Logo" src="./assets/logo3.png" />-->
+      <span>S</span>o <span>H</span>ow <span>I</span>s <span>T</span>he
+      <span>W</span>eather?
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
       <form class="form-inline form-right">
