--- a/src/app/weather/weather-today/weather-today.component.sass
+++ b/src/app/weather/weather-today/weather-today.component.sass
@@ -29,6 +29,7 @@
     animation: rotateAngle 3s linear infinite alternate  
         
 .weather-info
+    font-weight: bolder
     text-align: center
 .weather-main-wrap
     max-width: 233px
