--- a/src/app/weather/weather.component.sass
+++ b/src/app/weather/weather.component.sass
@@ -6,8 +6,8 @@
         max-width: 100vw
 .wrap
     .today
-        margin: 25px 2.5vw
-        max-width: 100%
+        margin: 25px 0
+        width: 100%
         border-radius: 25px
         padding: 25px 2.5vw
         background-color: $light-opa
@@ -15,6 +15,7 @@
         @media screen and ( max-width: 774px )
             padding: 5vh 5vw 5vw 5vw
             margin: 0
+            margin-top: 25px
             background-color: transparent
             box-shadow: none
     .week
